--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <script language="JavaScript" type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <!-- <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script> -->
   <link rel="stylesheet" href="game.css" type="text/css">
 </head>
 <body>
